alloy: Fix crashes when extensions are disabled (fixes issue #3430)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -380,11 +380,14 @@ patches = [
     'name': 'build',
   },
   {
-    # Changes necessary to support for chrome extensions. Add a new
+    # Changes necessary to support chrome extensions. Add a new
     # ExtensionHost constructor that allows CEF to create the WebContents.
     # https://bitbucket.org/chromiumembedded/cef/issues/1947
     #
     # Don't initialize PrerenderContents object in StreamsPrivateAPI.
+    #
+    # Return nullptr from ExtensionsClient::Get and ExtensionRegistry::Get
+    # when extensions are disabled.
     'name': 'extensions_1947',
   },
   {
