alloy: Fix crashes when extensions are disabled (fixes issue #3430)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -388,6 +388,8 @@ patches = [
     # https://bitbucket.org/chromiumembedded/cef/issues/1947
     #
     # Don't initialize PrerenderContents object in StreamsPrivateAPI.
+    #
+    # Return nullptr from ExtensionRegistry::Get when extensions are disabled.
     'name': 'extensions_1947',
   },
   {
