--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -443,6 +443,9 @@ patches = [
     # - Fix cache directory structure ("C:\temp\cache\cache\Cache" should be
     #   "C:\temp\cache\Cache").
     # https://bitbucket.org/chromiumembedded/cef/issues/2622
+    #
+    # alloy: Avoid initialization of privacy sandbox and identity manager.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3434
     'name': 'services_network_2622',
   },
   {
