Update to Chromium version 112.0.5615.0
- Windows: VS2022 and Win11 SDK 10.0.22621.0 are now required.

--- a/cmake/cef_variables.cmake.in
+++ b/cmake/cef_variables.cmake.in
@@ -538,9 +538,11 @@ if(OS_WINDOWS)
       psapi.lib
       SetupAPI.lib
       Shell32.lib
+      Shcore.lib
       Userenv.lib
       version.lib
       wbemuuid.lib
+      WindowsApp.lib
       winmm.lib
       )
 
