--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -609,15 +609,18 @@ patches = [
     'name': 'linux_glib_deprecated_volatile'
   },
   {
-    # Specify an output name for the pdfium build component to fix PDF
-    # loading with component build.
-    # https://pdfium-review.googlesource.com/c/pdfium/+/103501
-    'name': 'pdfium_103501',
-    'path': 'third_party/pdfium'
+    # Restore low-level attribute access from WebElement which was removed in
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4200240
+    'name': 'blink_web_element_4200240'
   },
   {
-    # Windows: Fix cef_sandbox compile error related to unsafe narrowing.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/4219163
-    'name': 'win_power_monitor_4219163'
+    # win: Add missing process_handle.h include for cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4294575
+    'name': 'base_logging_4294575'
+  },
+  {
+    # Fix Check failed: !*GetSingletonDisallowedTls() on shutdown.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4294854
+    'name': 'rlz_tracker_4294854'
   }
 ]
