win: Add windows_sdk_version GN arg (see https://crbug.com/1420723)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -31,6 +31,9 @@ patches = [
     #
     # Windows: Add cc_wrapper support for sccache builds.
     # https://bitbucket.org/chromiumembedded/cef/issues/2432
+    #
+    # Windows: Add GN arg windows_sdk_version.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1420723
     'name': 'gn_config',
   },
   {
