Update to Chromium version 113.0.5672.0 (#1121455)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -391,14 +391,6 @@ patches = [
     'name': 'extensions_1947',
   },
   {
-    # macOS: Fix undesirable switch to discrete GPU during startup.
-    # https://github.com/chromiumembedded/cef/issues/2398
-    #
-    # macOS: Rely on symlinks to find the Libraries directory.
-    # https://bugs.chromium.org/p/chromium/issues/detail?id=757974#c23
-    'name': 'mac_gpu',
-  },
-  {
     # macOS: Make the NativeEventProcessor protocol dependency optional.
     # https://github.com/chromiumembedded/cef/issues/2539
     'name': 'mac_event_observer_2539',
@@ -614,13 +606,13 @@ patches = [
     'name': 'blink_web_element_4200240'
   },
   {
-    # win: Add missing process_handle.h include for cef_sandbox build.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/4294575
-    'name': 'base_logging_4294575'
+    # Fix GN gen unresolved dependencies error with cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4401670
+    'name': 'gpu_test_trace_4401670'
   },
   {
-    # Fix Check failed: !*GetSingletonDisallowedTls() on shutdown.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/4294854
-    'name': 'rlz_tracker_4294854'
+    # Fix ThreadChecker crash on startup with Chrome runtime + multi-threaded
+    # message loop.
+    'name': 'metrics_system_profile'
   }
 ]
