chrome: mac: Support dispatch of window commands (see #3462)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -259,6 +259,11 @@ patches = [
     'name': 'chrome_browser_extensions',
   },
   {
+    # chrome: Expose static access to BrowserFrameMac methods.
+    # https://github.com/chromiumembedded/cef/issues/3462
+    'name': 'chrome_browser_frame_mac',
+  },
+  {
     # alloy: Disable ProxyErrorClient callbacks when extensions are disabled.
     # https://github.com/chromiumembedded/cef/issues/2830
     'name': 'chrome_browser_net_proxy',
