--- a/cmake/cef_variables.cmake.in
+++ b/cmake/cef_variables.cmake.in
@@ -359,6 +359,7 @@ if(OS_MAC)
   # Format is "<name suffix>:<target suffix>:<plist suffix>".
   set(CEF_HELPER_APP_SUFFIXES
     "::"
+    " (Alerts):_alerts:.alerts"
     " (GPU):_gpu:.gpu"
     " (Plugin):_plugin:.plugin"
     " (Renderer):_renderer:.renderer"
