--- a/BUILD.gn
+++ b/BUILD.gn
@@ -443,6 +443,12 @@ source_set("libcef_test_support") {
     # Support for UI input events.
     "//ui/views:test_support",
   ]
+
+  if (is_mac && enable_base_tracing && !is_component_build) {
+    # Add libtest_trace_processor.dylib as a runtime dependency.
+    # See https://crrev.com/8b18bd125d
+    deps += [ "//base/test:test_trace_processor_bundle_data" ]
+  }
 }
 
 
@@ -1352,6 +1358,8 @@ make_pack_header("resources") {
     "$root_gen_dir/content/browser/webrtc/resources/grit/webrtc_internals_resources.h",
     "$root_gen_dir/content/grit/content_resources.h",
     "$root_gen_dir/content/grit/dev_ui_content_resources.h",
+    "$root_gen_dir/content/grit/gpu_resources.h",
+    "$root_gen_dir/content/grit/histograms_resources.h",
     "$root_gen_dir/extensions/grit/extensions_browser_resources.h",
     "$root_gen_dir/extensions/grit/extensions_renderer_resources.h",
     "$root_gen_dir/extensions/grit/extensions_resources.h",
@@ -1375,6 +1383,8 @@ make_pack_header("resources") {
     "//components/resources:components_resources",
     "//components/resources:dev_ui_components_resources",
     "//content/browser/devtools:devtools_resources",
+    "//content/browser/resources/gpu:resources",
+    "//content/browser/resources/histograms:resources",
     "//content/browser/tracing:resources",
     "//content/browser/webrtc/resources",
     "//content:content_resources",
@@ -1503,6 +1513,8 @@ if (is_mac) {
       sources += [ "$root_out_dir/icudtl.dat" ]
       public_deps += [ "//third_party/icu:icudata", ]
     }
+
+    sources += [ "//ui/gl/resources/angle-metal/gpu_shader_cache.bin" ]
 
     if (v8_use_external_startup_data) {
       sources += [
