mac: Remove libtest_trace_processor.dylib as a runtime dependency

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -609,5 +609,10 @@ patches = [
     # Fix ThreadChecker crash on startup with Chrome runtime + multi-threaded
     # message loop.
     'name': 'metrics_system_profile'
+  },
+  {
+    # macOS: Remove run-time dependency on libtest_trace_processor.dylib
+    # Reverts the changes from https://crrev.com/8b18bd125d
+    'name': 'base_test_4396276'
   }
 ]
