win: Fix MSVC compile errors in registry.cc (fixes #3519)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -522,6 +522,12 @@ patches = [
     'name': 'base_sandbox_2743',
   },
   {
+    # Windows: Fix MSVC compile errors using base::MakeFixedFlatMapSorted
+    # in registry.cc when building cef_sandbox.
+    # https://github.com/chromiumembedded/cef/issues/3519
+    'name': 'base_sandbox_3519',
+  },
+  {
     # Add RenderWidgetHostImpl::SetCompositorForFlingScheduler to fix fling
     # scrolling in OSR mode.
     # https://github.com/chromiumembedded/cef/issues/2745
