Update to Chromium version 115.0.5790.0 (#1148114)
- Mac: 13.3 SDK (Xcode 14.3) is now required

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -188,9 +188,6 @@ patches = [
   },
   {
     # Support CEF changes in chrome/browser.
-    #
-    # Fix duplicate symbols for enterprise_connectors::ContentAnalysisSdkManager
-    # https://bugs.chromium.org/p/chromium/issues/detail?id=1368633
     'name': 'chrome_browser',
   },
   {
@@ -277,8 +274,11 @@ patches = [
   {
     # Make some methods of ProfileManager virtual.
     #
-    # Don't create IdentityManager in RendererUpdater.
+    # alloy: Don't create IdentityManager or BoundSessionCookieRefreshService in
+    # RendererUpdater. This avoids adding a dependency on
+    # AccountConsistencyModeManager which itself depends on browser signin.
     # https://github.com/chromiumembedded/cef/issues/1917
+    # https://github.com/chromiumembedded/cef/issues/3401
     #
     # chrome: Support CEF incognito Profiles that allow Browser creation.
     # chrome: Allow CEF to delay OffTheRecordProfileImpl initialization.
@@ -576,6 +576,13 @@ patches = [
     # Windows: Fix crash when |sandbox_info| parameter is nullptr.
     # https://github.com/chromiumembedded/cef/issues/3210
     'name': 'win_sandbox_3210',
+  },
+  {
+    # Windows: Fix MSVC compile error with sandbox target.
+    # error: static assertion failed due to requirement
+    # '!is_const_v<const unsigned char>': The C++ Standard forbids
+    # containers of const elements because allocator<const T> is ill-formed.
+    'name': 'win_sandbox_policy',
   },
   {
     # Windows: Always use the root window as the owner for shell dialogs.
