--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1353,9 +1353,10 @@ make_pack_header("resources") {
     "$root_gen_dir/content/browser/tracing/grit/tracing_resources.h",
     "$root_gen_dir/content/browser/webrtc/resources/grit/webrtc_internals_resources.h",
     "$root_gen_dir/content/grit/content_resources.h",
-    "$root_gen_dir/content/grit/dev_ui_content_resources.h",
     "$root_gen_dir/content/grit/gpu_resources.h",
     "$root_gen_dir/content/grit/histograms_resources.h",
+    "$root_gen_dir/content/grit/process_resources.h",
+    "$root_gen_dir/content/grit/service_worker_resources.h",
     "$root_gen_dir/extensions/grit/extensions_browser_resources.h",
     "$root_gen_dir/extensions/grit/extensions_renderer_resources.h",
     "$root_gen_dir/extensions/grit/extensions_resources.h",
@@ -1381,10 +1382,11 @@ make_pack_header("resources") {
     "//content/browser/devtools:devtools_resources",
     "//content/browser/resources/gpu:resources",
     "//content/browser/resources/histograms:resources",
+    "//content/browser/resources/process:resources",
+    "//content/browser/resources/service_worker:resources",
     "//content/browser/tracing:resources",
     "//content/browser/webrtc/resources",
     "//content:content_resources",
-    "//content:dev_ui_content_resources",
     "//extensions:extensions_browser_resources",
     "//extensions:extensions_renderer_resources",
     "//extensions:extensions_resources_grd",
