--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -243,6 +243,9 @@ patches = [
     # - Support nullptr gfx::NativeWindow/gfx::NativeView dialog parent for CEF
     #   windowless rendering.
     # https://github.com/chromiumembedded/cef/issues/3316
+    #
+    # Fix NativeWebContentsModalDialogManagerViews::HostChanged to not reparent
+    # between different root windows.
     'name': 'chrome_browser_dialogs_widget',
   },
   {
@@ -627,5 +630,14 @@ patches = [
     # macOS: Remove run-time dependency on libtest_trace_processor.dylib
     # Reverts the changes from https://crrev.com/8b18bd125d
     'name': 'base_test_4396276'
+  },
+  {
+    # Create top-level widget type when Widget::InitParams::child is false.
+    'name': 'ui_views_widget_type'
+  },
+  {
+    # win/linux: Fix rounding errors with Screen[Win] DIP/pixel conversions.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1443650#c18
+    'name': 'screen_1443650'
   }
 ]
