mac: tests: Fix NOTREACHED with ViewsTextfieldTest.TextfieldKeyEvent

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -644,5 +644,10 @@ patches = [
     # mac: Keep bubble popups on-screen.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=893292#c10
     'name': 'mac_platform_style_bubble_893292'
+  },
+  {
+    # mac: Fix NOTREACHED with ViewsTextfieldTest.TextfieldKeyEvent.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1467329
+    'name': 'mac_keyboard_conversion_1467329'
   }
 ]
