win: Fix implicit conversion changes signedness error

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -649,5 +649,11 @@ patches = [
     # mac: Fix NOTREACHED with ViewsTextfieldTest.TextfieldKeyEvent.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1467329
     'name': 'mac_keyboard_conversion_1467329'
+  },
+  {
+    # win: Fix implicit conversion changes signedness error with
+    # cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4718245
+    'name': 'base_escape_4718245'
   }
 ]
