win: Add support for --force-light-mode command-line flag (fixes #3534)
Like the existing --force-dark-mode flag.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -655,5 +655,11 @@ patches = [
     # cef_sandbox build.
     # https://chromium-review.googlesource.com/c/chromium/src/+/4718245
     'name': 'base_escape_4718245'
+  },
+  {
+    # win: Add support for "force-light-mode" command-line option.
+    # https://github.com/chromiumembedded/cef/issues/3534
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4766248
+    'name': 'win_light_mode_3534'
   }
 ]
