mac: Add support for force-[light|dark]-mode flags (see #3534)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -652,8 +652,9 @@ patches = [
   },
   {
     # win: Add support for "force-light-mode" command-line option.
+    # mac: Add support for "force-light-mode" and "force-dark-mode".
     # https://github.com/chromiumembedded/cef/issues/3534
     # https://chromium-review.googlesource.com/c/chromium/src/+/4766248
-    'name': 'win_light_mode_3534'
+    'name': 'light_mode_3534'
   }
 ]
