--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -644,5 +644,12 @@ patches = [
     # mac: Keep bubble popups on-screen.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=893292#c10
     'name': 'mac_platform_style_bubble_893292'
+  },
+  {
+    # win: Add support for "force-light-mode" command-line option.
+    # mac: Add support for "force-light-mode" and "force-dark-mode".
+    # https://github.com/chromiumembedded/cef/issues/3534
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4766248
+    'name': 'light_mode_3534'
   }
 ]
