win: Fix exiting fullscreen when windows are created fullscreen (fixes #3243)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -656,5 +656,11 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3534
     # https://chromium-review.googlesource.com/c/chromium/src/+/4766248
     'name': 'light_mode_3534'
+  },
+  {
+    # win: Fix exiting fullscreen when windows are created fullscreen.
+    # https://github.com/chromiumembedded/cef/issues/3243
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4778723
+    'name': 'win_fullscreen_3243'
   }
 ]
