chrome: Support configuration of Chrome policy management (fixes #3581)
Disable Chrome policy management by default. Add CefSettings.chrome_policy_id
which, when configured, enables Chrome policy management. See
https://support.google.com/chrome/a/answer/9037717 for background.

To test:
- Start with a machine where Google Chrome is managed.
- Run `cefclient --enable-chrome-runtime --url=chrome://policy/`
  There should be no configured policies.
- Run `cefclient --enable-chrome-runtime --url=chrome://policy/
       --enable-chrome-policy`
  Configured Platform properties should match Google Chrome.
- Run `cefclient --enable-chrome-runtime --url=chrome://policy/
       --enable-chrome-policy --enable-chrome-browser-cloud-management`
  Configured Platform and Cloud properties should match Google Chrome.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -269,6 +269,11 @@ patches = [
     'name': 'chrome_browser_permission_prompt',
   },
   {
+    # Support configuration of Chrome policy management.
+    # https://github.com/chromiumembedded/cef/issues/3581
+    'name': 'chrome_browser_policy',
+  },
+  {
     # alloy: Don't initialize ExtensionSystemFactory when extensions are
     # disabled.
     # https://github.com/chromiumembedded/cef/issues/2852
