--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -130,6 +130,8 @@ patches = [
     #
     # Add WebContentsObserver::RenderWidgetCreated.
     # https://github.com/chromiumembedded/cef/issues/3308
+    #
+    # Avoid crash in WebContentsImpl::GetWindowShowState with OSR.
     'name': 'web_contents_1257_1565',
   },
   {
@@ -442,7 +444,8 @@ patches = [
     #   "C:\temp\cache\Cache").
     # https://github.com/chromiumembedded/cef/issues/2622
     #
-    # alloy: Avoid initialization of privacy sandbox and identity manager.
+    # alloy: Avoid initialization of privacy sandbox, identity manager and
+    # first party sets policy.
     # https://github.com/chromiumembedded/cef/issues/3434
     'name': 'services_network_2622',
   },
@@ -661,5 +664,15 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3534
     # https://chromium-review.googlesource.com/c/chromium/src/+/4766248
     'name': 'light_mode_3534'
+  },
+  {
+    # Fix NOTREACHED() in RenderFrameHostImpl::CommitNavigation() with
+    # CorsTest.IframeNoneServerToCustomUnregisteredScheme.
+    # Fix bad optional access in VerifyInitiatorOrigin() with
+    # RequestHandlerTest.NotificationsCrossOriginDelayedRenderer.
+    # Partially reverts the below changes.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4829483
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1470837#c22
+    'name': 'rfh_navigation_4829483'
   }
 ]
