chrome: win: Fix app icon for default Chrome windows (fixes #3606)
This fixes the app icon for default Chrome windows such as DevTools
and Task Manager.

An ICON with value IDR_MAINFRAME (101) will be loaded from the main
executable is available. Otherwise, the default Chromium ICON will be
loaded from libcef.dll.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -684,5 +684,10 @@ patches = [
     # scheme) with insecure destination.
     # https://github.com/chromiumembedded/cef/issues/3596
     'name': 'net_url_request_3596'
+  },
+  {
+    # chrome: win: Fix loading of default app icon.
+    # https://github.com/chromiumembedded/cef/issues/3606
+    'name': 'win_app_icon_3606'
   }
 ]
