--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -280,6 +280,11 @@ patches = [
     'name': 'chrome_browser_policy',
   },
   {
+    # Support override of Chrome process singleton behavior.
+    # https://github.com/chromiumembedded/cef/issues/3609
+    'name': 'chrome_browser_startup',
+  },
+  {
     # alloy: Don't initialize ExtensionSystemFactory when extensions are
     # disabled.
     # https://github.com/chromiumembedded/cef/issues/2852
