linux: Disable compiler TLS in libxml2 (fixes #3616)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -694,5 +694,10 @@ patches = [
     # chrome: win: Fix loading of default app icon.
     # https://github.com/chromiumembedded/cef/issues/3606
     'name': 'win_app_icon_3606'
+  },
+  {
+    # linux: Disable compiler TLS in libxml2.
+    # https://github.com/chromiumembedded/cef/issues/3616
+    'name': 'linux_libxml_tls_3616'
   }
 ]
