linux: Disable compiler TLS in libxml2 (fixes #3616)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -678,5 +678,10 @@ patches = [
     # https://chromium-review.googlesource.com/c/chromium/src/+/4829483
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1470837#c22
     'name': 'rfh_navigation_4829483'
+  },
+  {
+    # linux: Disable compiler TLS in libxml2.
+    # https://github.com/chromiumembedded/cef/issues/3616
+    'name': 'linux_libxml_tls_3616'
   }
 ]
