Fix mojom_ts_generator.py error with Python 3.11

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -706,5 +706,10 @@ patches = [
     # windows: Fix implicit conversion error when building cef_sandbox.
     # https://chromium-review.googlesource.com/c/chromium/src/+/5120035
     'name': 'base_allocator_5120035'
+  },
+  {
+    # Fix mojom_ts_generator.py error with Python 3.11.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1422178
+    'name': 'mojo_generator_1422178'
   }
 ]
