Fix mojom_ts_generator.py error with Python 3.11

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -704,5 +704,10 @@ patches = [
     # chrome: mac: Support locale configuration.
     # https://github.com/chromiumembedded/cef/issues/3623
     'name': 'mac_chrome_locale_3623'
+  },
+  {
+    # Fix mojom_ts_generator.py error with Python 3.11.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1422178
+    'name': 'mojo_generator_1422178'
   }
 ]
