chrome: mac: Support locale configuration (fixes #3623)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -699,5 +699,10 @@ patches = [
     # linux: Disable compiler TLS in libxml2.
     # https://github.com/chromiumembedded/cef/issues/3616
     'name': 'linux_libxml_tls_3616'
+  },
+  {
+    # chrome: mac: Support locale configuration.
+    # https://github.com/chromiumembedded/cef/issues/3623
+    'name': 'mac_chrome_locale_3623'
   }
 ]
