Fix parent window move on show modal dialog (fixes #3629)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -250,6 +250,11 @@ patches = [
     #
     # Fix NativeWebContentsModalDialogManagerViews::HostChanged to not reparent
     # between different root windows.
+    #
+    # Fix incorrect movement of parent window when showing modal dialog.
+    # https://github.com/chromiumembedded/cef/issues/3629
+    # Partially reverts
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5006355
     'name': 'chrome_browser_dialogs_widget',
   },
   {
