alloy: Don't create GPUCache directory when cache_path is empty (fixes #3617)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -721,5 +721,10 @@ patches = [
     # chrome: mac: Support locale configuration.
     # https://github.com/chromiumembedded/cef/issues/3623
     'name': 'mac_chrome_locale_3623'
+  },
+  {
+    # alloy: Don't create GPUCache directory when cache_path is empty.
+    # https://github.com/chromiumembedded/cef/issues/3617
+    'name': 'content_renderer_host_3617'
   }
 ]
