views: mac: Add CEF_SHOW_STATE_HIDDEN (fixes #3630)
- Adds `--initial-show-state=hidden` support for cefclient and cefsimple
  where the window launches as initially hidden (no dock thumbnail).
- Adds `--hide-window-on-close` support for cefclient where clicking the
  red traffic light button hides the window instead of closing it.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -121,6 +121,9 @@ patches = [
     # chrome: Allow override of Widget::Activate() to support activation of
     # DevTools windows with external parent.
     # https://github.com/chromiumembedded/cef/issues/3282
+    #
+    # mac: Add support for ui::SHOW_STATE_HIDDEN.
+    # https://github.com/chromiumembedded/cef/issues/3630
     'name': 'views_widget',
   },
   {
